i made buttons that let the users veiw the age and species of all the pets

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <h2 class="subtitle">JavaScript</h2>
       <button class="button is-light is-success" onclick="nameadding()">Add pet</button>
       <button class="button is-light is-success" onclick="names()">Name of pet</button>
+      <button class="button is-light is-success" onclick="ages()">age of pet</button>
+      <button class="button is-light is-success" onclick="speicies()">species of pet</button>
     </main>
 
     <footer class="footer">
