i tried to make a search target

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <main class="section">
       <h2 class="subtitle">JavaScript</h2>
       <button class="button is-light is-success" onclick="nameadding()">Add pet</button>
+      <button class="button is-light is-success" onclick="search()">search for pet</button>
       <button class="button is-light is-success" onclick="names()">Name of pet</button>
       <button class="button is-light is-success" onclick="ages()">age of pet</button>
       <button class="button is-light is-success" onclick="speicies()">species of pet</button>
