I tried to do the reomve the specific object

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <button class="button is-light is-success" onclick="names()">Name of pet</button>
       <button class="button is-light is-success" onclick="ages()">age of pet</button>
       <button class="button is-light is-success" onclick="speicies()">species of pet</button>
+      <button class="button is-light is-success" onclick="Removepet()">Remove pet</button>
     </main>
 
     <footer class="footer">
